# FlipSIDE

./: CMakeLists.txt  README.md
.tcdd/: README.md
src/: AnimationFrame.cpp  AnimationFrame.hpp  CharacterSprite.cpp  CharacterSprite.hpp  CinemaType.cpp  CinemaType.hpp  Game.cpp  Game.hpp  Game.rst  Input.cpp  Input.hpp  NN.cpp  NND3d2.cpp  PlayerData.cpp  PlayerData.hpp  Random.cpp  Random.hpp  Sound.cpp  Sound.hpp  SoundEms.cpp  Vb.cpp  Vb.hpp  VbFile.cpp  VbFile.hpp  Vertex.cpp  Vertex.hpp  View.cpp  View.hpp  World.cpp  World.hpp  dummy.cpp  main.cpp  view.hpp
src/game/: BaseScreen.cpp  BaseScreen.hpp  Camera.cpp  Camera.hpp  CharacterProc.cpp  CharacterProc.hpp  CharacterSprite.cpp  CharacterSprite.hpp  CinemaType.cpp  CinemaType.hpp  EntityManager.cpp  EntityManager.hpp  Env.cpp  Env.hpp  Game.cpp  Game.hpp  GameOverScreen.cpp  GameOverScreen.hpp  GameState.cpp  GameState.hpp  IntroStory.cpp  IntroStory.hpp  LegacyGame.cpp  LegacyGame.hpp  NowLoading.cpp  NowLoading.hpp  PlayerData.cpp  PlayerData.hpp  SelectScreen.cpp  SelectScreen.hpp  TitleScreen.cpp  TitleScreen.hpp  World.cpp  World.hpp  constants.hpp  stage.hpp
src/game/procs/: CharacterProc.cpp  CharacterProc.hpp  CinemaProc.cpp  CinemaProc.hpp  CinemaType.cpp  CinemaType.hpp  Enemies.cpp  Enemies.hpp  PlayerProc.cpp  PlayerProc.hpp
src/game/stage/: BaseScreen.cpp  BaseScreen.hpp  Camera.cpp  CharacterProc.cpp  CharacterProc.hpp  CharacterSprite.cpp  CharacterSprite.hpp  EntityManager.cpp  EntityManager.hpp  LegacyGame.cpp  LegacyGame.hpp  Level.cpp  Level.hpp  World.cpp  World.hpp
src/game/stage/procs/: CharacterProc.cpp  CharacterProc.hpp  CharacterProcFactory.cpp  CharacterProcFactory.hpp  CinemaProc.cpp  CinemaProc.hpp  Enemies.cpp  Enemies.hpp  LegacyProc.cpp  LegacyProc.hpp  PlayerProc.cpp  PlayerProc.hpp
src/game/stage/procs/enemies/: Arby.cpp  Arby.hpp  BlueStick.cpp  BlueStick.hpp  Kerbose.cpp  Kerbose.hpp  PaulRunner.cpp  PaulRunner.hpp  PidgeonBomber.cpp  PidgeonBomber.hpp  RedBullet.cpp  RedBullet.hpp  TrashDigger.cpp  TrashDigger.hpp
src/game/stage/procs/terrain/: Clouds.cpp  Clouds.hpp  GreenSpring.cpp  GreenSpring.hpp
src/view/: View.cpp  View.hpp
